# ruvector

./: .gitignore  .gitmodules  Cargo.toml  README.md  SECURITY.md
.github/workflows/: build-tiny-dancer.yml  ci.yml  ruvllm-build.yml  sync-upstream.yml
crates/mcp-brain-server/: Cargo.toml
crates/mcp-brain-server/src/: routes.rs
crates/photonlayer-bench/: Cargo.toml
crates/photonlayer-bench/src/: baselines.rs  learn.rs  mnist.rs  mnist_bench.rs  pipeline.rs  privacy.rs  synthetic.rs  verification.rs
crates/photonlayer-bench/tests/: mnist_differential_bench.rs  more_data_bench.rs
crates/photonlayer-cli/: Cargo.toml
crates/photonlayer-cli/src/: main.rs
crates/photonlayer-core/: Cargo.toml
crates/photonlayer-core/src/: config.rs  fft.rs  mask.rs  metrics.rs  propagate.rs  receipt.rs
crates/photonlayer-core/tests/: propagation_speedup.rs
crates/photonlayer-ruvector/: Cargo.toml
crates/photonlayer-ruvector/src/: boundary.rs  coherence.rs  embedding.rs  lib.rs  memory.rs  receipts.rs
crates/photonlayer-wasm/: Cargo.toml
crates/photonlayer-wasm/src/: lib.rs
crates/ruvector-coherence-hnsw/: Cargo.toml
crates/ruvector-coherence-hnsw/src/: coherence.rs  dataset.rs  graph.rs  lib.rs  metrics.rs  search.rs
crates/ruvector-core/src/: agenticdb.rs  types.rs  vector_db.rs
crates/ruvector-gnn-node/npm/darwin-arm64/: ruvector-gnn.darwin-arm64.node
crates/ruvector-gnn-node/npm/darwin-x64/: ruvector-gnn.darwin-x64.node
crates/ruvector-gnn-rerank/: Cargo.toml  README.md
crates/ruvector-gnn-rerank/src/: error.rs  graph.rs  lib.rs  main.rs  reranker.rs
crates/ruvector-gnn-rerank/tests/: perf_benchmark.rs  recall_regression.rs  security.rs
crates/ruvector-gnn/src/: layer.rs
crates/ruvector-graph/: Cargo.toml
crates/ruvector-graph/benches/: typed_graph_bench.rs
crates/ruvector-graph/src/: bm25.rs  codegen.rs  embed.rs  error.rs  graph.rs  lib.rs  schema.rs  typed_graph.rs
crates/ruvector-hnsw-repair/: Cargo.toml
crates/ruvector-hnsw-repair/src/: benchmark.rs  graph.rs  lib.rs  strategy.rs
crates/ruvector-hybrid/: Cargo.toml
crates/ruvector-hybrid/src/: bm25.rs  dense.rs  fusion.rs  lib.rs  main.rs
crates/ruvector-matryoshka/: Cargo.toml
crates/ruvector-matryoshka/src/: dataset.rs  hnsw.rs  lib.rs
crates/ruvector-maxsim/: Cargo.toml
crates/ruvector-maxsim/benches/: maxsim_bench.rs
crates/ruvector-maxsim/src/: bucket.rs  error.rs  flat.rs  hnsw.rs  lib.rs  main.rs  score.rs  types.rs
crates/ruvector-postgres/src/types/: vector.rs
crates/ruvector-pq-search/: Cargo.toml
crates/ruvector-pq-search/src/: codebook.rs  encoder.rs  flat.rs  ivf_pq.rs  lib.rs  main.rs  residual.rs
crates/ruvector-temporal-coherence/: Cargo.toml
crates/ruvector-temporal-coherence/src/: benchmark.rs  decay.rs  graph.rs  lib.rs  main.rs  search.rs  store.rs
crates/ruvector-tiny-dancer-core/: Cargo.toml
crates/ruvector-tiny-dancer-core/examples/: train_from_draco.rs
crates/ruvector-tiny-dancer-core/src/: model.rs  training.rs
crates/ruvector-tiny-dancer-node/: Cargo.toml
crates/ruvector-tiny-dancer-node/src/: lib.rs
crates/ruvllm-cli/src/commands/: download.rs
crates/ruvllm/benches/: recurrent_depth_bench.rs
crates/ruvllm/src/models/: rdt.rs  sampling.rs
crates/ruvllm/src/models/openmythos/: act_kernel.rs  attention.rs  ffn.rs  mod.rs  recurrent.rs
crates/rvf/rvf-node/npm/darwin-x64/: rvf-node.darwin-x64.node
crates/rvf/rvf-node/npm/linux-x64-gnu/: rvf-node.linux-x64-gnu.node
crates/rvf/rvf-node/npm/win32-x64-msvc/: rvf-node.win32-x64-msvc.node
docs/adr/: ADR-194-gnn-rerank.md  ADR-211-temporal-coherence-agent-memory.md  ADR-252-agent-memory-compaction.md  ADR-252-fastgrnn-training-pipeline.md  ADR-252-multi-vector-maxsim.md  ADR-253-helixdb-comparison-ruvector-improvements.md  ADR-254-coherence-hnsw-search.md  ADR-254-ruvector-turbovec-fastscan-index.md  ADR-255-oia-model-integration.md  ADR-256-hybrid-sparse-dense-search.md  ADR-256-metaharness-sdk-evaluation.md  ADR-257-ruqu-rvdna-standalone-submodules.md  ADR-258-hnsw-delete-repair.md  ADR-258-ruvllm-rdt-gpu-optimization.md  ADR-259-ruvllm-darwin-mode-local-mutator.md  ADR-260-photonlayer-optical-computing-simulator.md  ADR-261-photonlayer-mask-exchange-and-determinism.md  ADR-262-photonlayer-privacy-preserving-optical-verification.md  ADR-263-photonlayer-fibergate-transmission-matrix.md  ADR-264-matryoshka-coarse-fine-search.md  ADR-264-pq-adc-search.md
docs/research/nightly/2026-05-21-gnn-rerank/: README.md  gist.md
docs/research/nightly/2026-06-13-temporal-coherence-agent-memory/: README.md  gist.md
docs/research/nightly/2026-06-14-agent-memory-compaction/: README.md  gist.md
docs/research/nightly/2026-06-15-multi-vector-maxsim/: README.md  gist.md
docs/research/nightly/2026-06-16-coherence-hnsw-search/: README.md  gist.md
docs/research/nightly/2026-06-17-hybrid-sparse-dense/: README.md  gist.md
docs/research/nightly/2026-06-18-hnsw-delete-repair/: README.md  gist.md
docs/research/nightly/2026-06-20-pq-adc-search/: README.md  gist.md
docs/research/nightly/2026-06-21-matryoshka-coarse-fine/: README.md  gist.md
docs/research/photonlayer/: APPLICATIONS.md  ASSESSMENT.md  sota.md
examples/OSpipe/: Cargo.toml
examples/rvf/: Cargo.toml
scripts/: extract-ruqu-rvdna-submodules.sh
