[package]
name = "ruvector-gnn-rerank"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GNN-enhanced candidate reranking for approximate ANN search in ruvector"
readme = "README.md"
keywords = ["vector-search", "ann", "gnn", "reranking", "rag"]
categories = ["algorithms", "data-structures"]

[dependencies]
rand     = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "benchmark"
path = "src/main.rs"

[lib]
name = "ruvector_gnn_rerank"
crate-type = ["rlib"]

[lints.rust]
dead_code        = "allow"
unused_variables = "allow"
unused_imports   = "allow"

[dev-dependencies]
rand = { workspace = true }
rand_distr = { workspace = true }
