[package]
name = "ruvector-hnsw-repair"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Online HNSW graph repair after vector deletions — three deletion strategies with measured recall recovery"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[dependencies]
rand = { workspace = true }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[lints.clippy]
pedantic = { level = "allow", priority = -2 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
